# QuestionsBot

./: .env.example  pyproject.toml
tests/test_handlers/: test_reg.py
tests/test_repo/: test_mongo_user.py
tgbot/: cli.py  config.py
tgbot/handlers/: user.py
tgbot/handlers/dialogs/registration/: dialogs.py  handlers.py  states.py
tgbot/middlewares/: db.py  role.py
tgbot/models/: dto.py  repo.py  role.py
tgbot/repositories/: __init__.py  fabric.py
tgbot/repositories/mongo/: __init__.py
tgbot/repositories/other/: __init__.py  fake.py
