[tool.poetry]
name = "questionsbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
aiogram-dialog = "^1.9.0"
environs = "^9.5.0"
sqlalchemy = "^1.4.45"
asyncpg = "^0.27.0"
motor = "^3.1.1"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
